--- a/main.html
+++ b/main.html
@@ -1,24 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>TodoList practice</title>
     </head>
-    <body align=center>
-        <header>
-            <h2>What do yo want to do?</h2>
-            <input type="text">
-            <input type="button" value="enter">
-        </header>
-        <hr size="5" width="50%" noshade="">
-        <p>Todo</p>
-        <menu>
-            <li></li>
-        </menu>
-            
-        <p>Done</p>
-        <menu>
-            <li></li>
-        </menu>    
+    <body>
+        <input id="text"><button id="add">Add</button>
+        <hr>
+        <div id="todo"></div>
+        <div id="fin"></div>
         
+        <script src="main.js"></script>
     </body>
 </html>
