new clear funtion

--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
         <hr>
         <div id="todo"></div>
         <div id="fin"></div>
+        <input type="button" value="clear" id="clear">
         
         <script src="main.js"></script>
     </body>
